--- a/doc/Makefile
+++ b/doc/Makefile
@@ -3,15 +3,29 @@
 
 JOB       := mte7101
 BUILD     := mte7101
-CLEAN_EXT := nls,ilg,aux,log,idx,out,glo,toc,lot,tex~,backup,bbl,blg,1,2,3,4,5,6,7,8,9,10,dvi,emp*mp,ooplss*mp,nlo,tdo,dvi,lof,lol,glg,gls,ist
+CLEAN_EXT := nls,ilg,aux,log,idx,out,glo,toc,lot,tex~,backup,bbl,blg,1,2,3,4,5,6,7,8,9,10,dvi,emp*mp,ooplss*mp,nlo,tdo,dvi,lof,lol,glg,gls,ist,hst,ver
 PDFLATEX  := pdflatex
 
-.PHONY: all build clean dist-clean
+.PHONY: all build build-fast clean dist-clean watch watch-fast
+
+.set-build-fast:
+	$(eval BUILD_COMMAND = build-fast)
+
+.set-build:
+	$(eval BUILD_COMMAND = build)
+
+.watch-command:
+	fswatch -o . -r --include '\.tex$$' --include '\.png$$' --include 'minutes/.*' --exclude '.*' | (while read; do make $(BUILD_COMMAND); done)
+
+test: .set-build
+	@echo $(BUILD_TYPE)
+
+test-fast: .set-build-fast
+	@echo $(BUILD_TYPE)
 
 all: clean build
 
 build: clean
-	# -shell-escape allows LaTeX calls to the outside world
 	$(PDFLATEX) -jobname $(JOB) -shell-escape -interaction=nonstopmode $(BUILD) 1> /dev/null
 	bibtex $(JOB) 1> /dev/null
 	$(PDFLATEX) -jobname $(JOB) -shell-escape -interaction=nonstopmode $(BUILD) 1> /dev/null
@@ -20,14 +34,11 @@ build: clean
 	$(PDFLATEX) -jobname $(JOB) -shell-escape -interaction=nonstopmode $(BUILD) 1> /dev/null
 
 build-fast:
-	# -shell-escape allows LaTeX calls to the outside world
 	$(PDFLATEX) -jobname $(JOB) -shell-escape -interaction=nonstopmode $(BUILD) 1> /dev/null
 
-watch:
-	while true; do inotifywait -r -e modify --exclude="(.*.lol|.*.lot|.*.lof|.*.toc|.*.tdo|.*.ist|.*.out|.*.pdf|.*.aux|.*.glo|.*.idx|.*.bbl|.*.swp|.*.blg|.*.fdb_latexmk|.*.fls|.*.log)" . && make build; done
+watch: .set-build .watch-command
 
-watch-fast:
-	while true; do inotifywait -r -e modify --exclude="(.*.lol|.*.lot|.*.lof|.*.toc|.*.tdo|.*.ist|.*.out|.*.pdf|.*.aux|.*.glo|.*.idx|.*.bbl|.*.swp|.*.blg|.*.fdb_latexmk|.*.fls|.*.log)" . && make build-fast; done
+watch-fast: .set-build-fast .watch-command
 
 clean:
 	@rm -f *{$(CLEAN_EXT)}
