Refactor Makefile a bit: Add bibliography helper and debug output

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,13 +1,15 @@
 # -*- coding: UTF-8 -*-
 # vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=make
 
-JOB       := mte7101
-BUILD     := mte7101
-CLEAN_EXT := nls,ilg,aux,log,idx,out,glo,toc,lot,tex~,backup,bbl,blg,1,2,3,4,5,6,7,8,9,10,dvi,emp*mp,ooplss*mp,nlo,tdo,dvi,lof,lol,glg,gls,ist,hst,ver
-PDFLATEX  := pdflatex
-OS        := $(shell uname)
+JOB          := mte7101
+BUILD        := mte7101
+CLEAN_EXT    := nls,ilg,aux,log,idx,out,glo,toc,lot,tex~,backup,bbl,blg,1,2,3,4,5,6,7,8,9,10,dvi,emp*mp,ooplss*mp,nlo,tdo,dvi,lof,lol,glg,gls,ist,hst,ver
+PDFLATEX     := pdflatex
+DEBUGLATEX   := ./pdflatex-color.sh
+BIBLIOGRAPHY := biber
+OS           := $(shell uname)
 
-.PHONY: all build build-fast clean dist-clean watch watch-fast
+.PHONY: all build build-fast build-debug clean dist-clean watch watch-fast
 
 .set-build-fast:
 	$(eval BUILD_COMMAND = build-fast)
@@ -32,14 +34,17 @@ all: clean build
 
 build: clean
 	$(PDFLATEX) -jobname $(JOB) -shell-escape -interaction=nonstopmode $(BUILD) 1> /dev/null
-	bibtex $(JOB) 1> /dev/null
-	$(PDFLATEX) -jobname $(JOB) -shell-escape -interaction=nonstopmode $(BUILD) 1> /dev/null
+	$(BIBLIOGRAPHY) $(JOB) 1> /dev/null
+	# $(PDFLATEX) -jobname $(JOB) -shell-escape -interaction=nonstopmode $(BUILD) 1> /dev/null
 	makeglossaries $(JOB) 1> /dev/null
 	$(PDFLATEX) -jobname $(JOB) -shell-escape -interaction=nonstopmode $(BUILD) 1> /dev/null
-	$(PDFLATEX) -jobname $(JOB) -shell-escape -interaction=nonstopmode $(BUILD) 1> /dev/null
+	# $(PDFLATEX) -jobname $(JOB) -shell-escape -interaction=nonstopmode $(BUILD) 1> /dev/null
 
 build-fast:
 	$(PDFLATEX) -jobname $(JOB) -shell-escape -interaction=nonstopmode $(BUILD) 1> /dev/null
+
+build-debug:
+	$(DEBUGLATEX) -jobname $(JOB) $(BUILD)
 
 watch: .set-build .watch-command
 
